# tokio-noise-codec

./: .gitignore  Cargo.toml  LICENSE-MIT  readme.md
src/: decoder.rs  encoder.rs  lib.rs
tests/: codec.rs
tests/helper/: mod.rs
